fixes main content alignment. Closes #187

--- a/angular/app/pages/header/header.less
+++ b/angular/app/pages/header/header.less
@@ -36,3 +36,7 @@
 .DemoHeader-github{
     margin-top: 17px;
 }
+
+.DemoHeader-spacer{
+    padding-top: 70px;
+}
